[gd_scene load_steps=2 format=3 uid="uid://cxn5pmt8qwvfd"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="InfoPanel" type="PanelContainer" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 250.0
offset_bottom = 130.0

[node name="VBoxContainer" type="VBoxContainer" parent="InfoPanel"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.851, 0.239, 1)
theme_override_font_sizes/font_size = 18
text = "üéÆ Controls"

[node name="ControlsLabel" type="Label" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Click: Move Character"

[node name="PositionLabel" type="Label" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Position: 0, 0"

[node name="StatusLabel" type="Label" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Status: Idle"

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = 20.0
offset_top = 140.0
offset_right = 220.0
offset_bottom = 160.0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 12
text = "‚ù§Ô∏è Health"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActionButton" type="Button" parent="."]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -80.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_font_sizes/font_size = 18
text = "üõèÔ∏è Go to Sleep"

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -120.0
offset_right = 300.0
offset_bottom = -80.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
vertical_alignment = 1

[node name="FloorIndicator" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(1, 0.851, 0.239, 1)
theme_override_font_sizes/font_size = 16
text = "Floor 1"
horizontal_alignment = 1

[connection signal="pressed" from="ActionButton" to="." method="_on_action_button_pressed"]
